# web-scraper

./: README.md  pyproject.toml  web_scraper.py
