[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = ""
authors = ["Richard Whitehead <damian253@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
pytest = "^5.4.3"
shell = "^1.0.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
